--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -11,9 +11,42 @@
         </div>
         <hr class="border-2">
         <!--* Form Section-->
-        <form [formGroup]="fFormGroup">
-            <shared-input [placeholder]="'Hola'" [id]="'hola1'"></shared-input>
-            <shared-input [placeholder]="'Hola2'" [id]="'hola2'"></shared-input>
+        <form [formGroup]="fFormGroup" (ngSubmit)="onSubmit()">
+            <div class="w-75 mx-auto">
+                <shared-input 
+                    [type]="'password'"
+                    [id]="'newPassword'"
+                    [placeholder]="'Contraseña Nueva'"
+                    [formControl]="newPasswordControl"
+                    [specialInput]="'password'"
+                    [formSubmitted]="formSubmitted">
+                </shared-input>
+            </div>
+            <div class="w-75 mx-auto mb-3">
+                <shared-input 
+                    [type]="'password'"
+                    [id]="'repeatPassword'"
+                    [placeholder]="'Repetir contraseña nueva'"
+                    [formControl]="repeatPasswordControl"
+                    [specialInput]="'password'"
+                    [formSubmitted]="formSubmitted">
+                </shared-input>
+            </div>
+            <!--? Mensajes de error-->
+            @if (inputError !== "") {
+                <div
+                    class="p-1 text-center text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">
+                    <!--{{inputError}}-->
+                    Ingrese su nueva contraseña
+                </div>
+            }
+            @else {
+                <div class="p-1 bg-white text-white ">|</div>
+            }
+            <!--? Input: Boton-->
+            <div class="input-group my-3">
+                <input type="submit" class="form-control btn btn-primary" value="Ingresar" [disabled]="!fFormGroup.valid" disabled>
+            </div>
         </form>
     </div>
 </div>
