--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
             <div class="px-2">
                 <p class="fs-5 text text-secondary text-center pb-1">Ingrese a su cuenta</p>
                 <!--* FORM-->
-                <form [formGroup]="aFormGroup" (ngSubmit)="onSubmit()">
+                <form  (ngSubmit)="onSubmit()">
                     <!--? Input: Usuario-->
                     <div class="w-75 mx-auto">
                         <shared-input 
