--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -49,7 +49,7 @@
                     }
                     <!--? Input: Boton-->
                     <div class="input-group my-3">
-                        <input type="submit" class="form-control btn btn-primary" value="Ingresar" [disabled]="!aFormGroup.valid">
+                        <input type="submit" class="form-control btn btn-primary" value="Ingresar" [disabled]="aFormGroup.valid">
                     </div>
                 </form>
             </div>
