--- a/src/app/pages/reportes-page/reportes-page.component.html
+++ b/src/app/pages/reportes-page/reportes-page.component.html
@@ -1,11 +1,13 @@
-<div class="h-100 w-100">
-    <div class="vh-100 d-flex bd-highlight">
+<div class="h-100 w-100 overflow-hidden ">
+    <div class="vh-100 wrapper d-flex bd-highlight">
         <shared-sidebar class="bd-highlight"></shared-sidebar>
         <div class="flex-grow-1 bd-highlight">
-            <shared-nav class=""></shared-nav>
-            <app-reportes></app-reportes>
-        </div> 
-        <!--position absolute-->
-        <!--Perfil, Reportes-->
+            <div>
+                <shared-nav></shared-nav>
+            </div>
+            <div class="m-2 overflow-auto d-flex flex-column page-content">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
     </div>
 </div>
