--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,14 +1,14 @@
 <div class="navbar shadow d-flex justify-content-end ">
-    <div class="nav-content p-2">
+    <div class="d-flex align-items-center px-4">
         <button class="btn btn-primary d-flex align-items-center py-2 px-2">
             <i class="bi bi-info-circle" style="font-size: 1.4em; color: #ffffff; padding-right: 0.5em;"></i>
             Descargar Manual
         </button>
     </div>
-    <div class="py-2 px-4">
+    <div class="px-4 border border-top-0 border-bottom-0 ">
         <button class="btn btn-toggle align-items-center rounded text-light d-flex align-items-center text-muted">
-            Damaya
-            <i class="bi bi-person-circle px-2" style="font-size: 2em; color: #E4E6E7;"></i>
+            {{usr_nombre}}
+            <i class="bi bi-person-circle px-2" style="font-size: 2.4em; color: #AEB4B7;"></i>
         </button>
     </div>
 </div>
