--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,25 +1,43 @@
-<div class="input-group mb-2 ">
-    <!--* Input Group template-->
-        <!--! INPUT ELEMENT-->
-        <input 
-            [type]="type"
-            class="form-control py-3" 
-            [id]="id" 
-            [placeholder]="placeholder"
-            [formControl]="formControl"
-            [ngClass]="{'is-invalid': formSubmitted && formControl.hasError('required')}"
-            #txtUser> 
-    <!--* Icono (eye) cambia la visibilidad del input (input password)-->
-    @if (specialInput === 'password' && type === 'password') {
-        <!--? Icono (ojo tachado) cuando la contraseña esta oculta-->
-        <div class="bg-light px-2 py-2 border border-1">
+<!--* Input Group template-->
+<div class="mb-3">
+    <div class="input-group">
+        <div class="form-floating">
+            <!--! INPUT ELEMENT-->
+            <input 
+                class="form-control" 
+                [id]="id" 
+                [formControl]="control" 
+                [type]="type" placeholder 
+                [required]="required"
+                [readOnly]="readOnly"
+                [ngClass]="{'border-danger-subtle border-2':control.hasError('required') && formSubmitted}">
+            <!--! FLOATING PLACEHOLDER ELEMENT-->
+            <label [for]="id">{{label}}</label>
+        </div>
+        <!--! EYE ICON ELEMENT (password)-->
+        @if (id === 'usr_password' && type === 'password') {
+            <!-- ? Icono (ojo tachado) cuando la contraseña esta oculta -->
+            <div class="bg-light px-2 py-2 border border-1">
             <i (click)="changeType()" class="bi bi-eye-slash text-black " style="font-size: 1.5em; color: #007bff;"></i>
+            </div>
+        }
+        @else if (id === 'usr_password' && type === 'text') {
+            <!-- ? Icono (ojo completo) cuando la contraseña esta visible -->
+            <div class="bg-light px-2 py-2 border border-1">
+                <i (click)="changeType()" class="bi bi-eye-fill text-black" style="font-size: 1.5em; color: #007bff;"></i>
+            </div>
+        }
+    </div>
+    <!--! CAMPOS LLENOS VALIDATION-->
+     <!-- <ng-container>
+        @if (control.hasError('required') && formSubmitted) {
+        <div class="p-1 text-center text-danger-emphasis bg-danger-subtle border border-danger-subtle">
+            El campo {{label}} es requerido
         </div>
-    }
-    @else if (specialInput === 'password' && type === 'text') {
-        <!--? Icono (ojo completo) cuando la contraseña esta visible-->
-        <div class="bg-light px-2 py-2 border border-1">
-            <i (click)="changeType()" class="bi bi-eye-fill text-black" style="font-size: 1.5em; color: #007bff;"></i>
-        </div>
-    }
+        }
+    </ng-container> -->
 </div>
+
+
+
+
