--- a/src/app/pages/reportes-page/reportes-page.component.html
+++ b/src/app/pages/reportes-page/reportes-page.component.html
@@ -1,11 +1,11 @@
 <div class="h-100 w-100 overflow-hidden ">
     <div class="vh-100 wrapper d-flex bd-highlight">
         <shared-sidebar class="bd-highlight"></shared-sidebar>
-        <div class="flex-grow-1 bd-highlight">
+        <div class="flex-grow-1 bd-highlight vw-85">
             <div>
                 <shared-nav></shared-nav>
             </div>
-            <div class="m-2 overflow-auto d-flex flex-column page-content">
+            <div class="m-2 overflow-auto d-flex flex-column page-content vw-85">
                 <router-outlet></router-outlet>
             </div>
         </div>
