--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -23,10 +23,10 @@
             <div class="collapse" id="reportesdiarios-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal small d-flex align-items-start flex-column ">
                     <li class="sublist">
-                        <a routerLink="/reportes/dte-reportes" routerLinkActive="active" class="link-light rounded text-decoration-none">Reporteria Diaria</a>
+                        <a routerLink="/reportes/reportes-diarios" routerLinkActive="active" class="link-light rounded text-decoration-none">Reporteria Diaria</a>
                     </li>
                     <li class="sublist">
-                        <a routerLink="/reportes/changepass" routerLinkActive="active" class="link-light rounded text-decoration-none">Reporteria Mensual</a>
+                        <a routerLink="/reportes/reportes-mensuales" routerLinkActive="active" class="link-light rounded text-decoration-none">Reporteria Mensual</a>
                     </li>
                 </ul>
             </div>
