--- a/src/app/components/reportes/reportes.component.html
+++ b/src/app/components/reportes/reportes.component.html
@@ -1,27 +1,17 @@
 <div class="px-4 py-2">
+    <div class="d-flex bg-success-subtle m-2 gap-4">
 
-    <button (click)="downloadReport()" id="download-reporte" class="mt-4 mx-4">Descargar reporte</button>
-    <button (click)="downloadSelectedReport()" id="download-reporte" class="mt-4 mx-4">Descargar reporte data seleccionada</button>
-    <span id="select-stats"></span>
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="form p-4" >
-            <input type="number" class="form-control" formControlName="n">
-            <input class="mt-2" type="submit">
-        </div>
-    </form>
-    <div id="ex-table-div" class="table table-primary thead-dark table-bordered"></div>
-    
-    <form (ngSubmit)="downloadSelectedReport()" [formGroup]="form2">
-        <input [formControlName]="'fecha'" class="form-control" type="date" (change)="downloadSelectedReport()" >
-        <input type="submit" class="mt-2">
-    </form>
-    
-    
-    <select id="filter-field"  [(ngModel)]="seleccionado" (change)="sleccionado()">
-        <option>Seleccione una opcion</option>
-        <option value="PROCESADO">PROCESADO</option>
-        <option value="RECHAZADO">RECHAZADO</option>
-    </select>
+        <form (ngSubmit)="downloadSelectedReport()" [formGroup]="form2" class="bg-danger-subtle w-25">
+            <input [formControlName]="'fecha'" class="form-control" type="date" (change)="downloadSelectedReport()" >
+        </form>
+        
+        <select id="filter-field"  [(ngModel)]="seleccionado" (change)="sleccionado()" class="form-select w-25">
+            @for (estado of estadoList ;  track estadoList){
+                <option value={{estado}}>{{estado}}</option>
+            }
+        </select>
+
+    </div>
     
     
     <div id="ex-table-diario-div" class="table table-primary thead-dark table-bordered"></div>
