--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,5 +1,6 @@
 <div class="navbar shadow d-flex justify-content-end ">
     <div class="d-flex align-items-center px-4">
+        <!--! DESCARGAR MANUAL-->
         <button class="btn btn-primary d-flex align-items-center py-2 px-2">
             <i class="bi bi-info-circle" style="font-size: 1.4em; color: #ffffff; padding-right: 0.5em;"></i>
             Descargar Manual
@@ -14,8 +15,10 @@
             {{usr_nombre}}
             <i class="bi bi-person-circle px-2" style="font-size: 2.4em; color: #AEB4B7;"></i>
         </button>
+        <!--! DROPDOWN PERFIL-->
         <ul class="dropdown-menu " aria-labelledby="dropdownUserButton">
-            <li class="dropdown-item btn" (click)="onLogout()">Logout</li>
+            <!--* LOGOUT-->
+            <li class="dropdown-item btn" data-bs-toggle="modal" data-bs-target="#logoutmodal" (keyup)="emitLogoutPress()">Cerrar Sesión</li>
         </ul>
     </div>
 </div>
