--- a/src/app/components/reporte-mensual/reporte-mensual.component.html
+++ b/src/app/components/reporte-mensual/reporte-mensual.component.html
@@ -6,6 +6,17 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <div class="form p-4">
             <input type="number" class="form-control" formControlName="n">
+            <input type="date" class="form-control" formControlName="fecha" >
+            <select (change)="sleccionado()" class="form-select">
+                @for (estado of estadoList ;  track estadoList){
+                    <option value={{estado}}>{{estado}}</option>
+                }
+            </select>
+            <select (change)="sleccionado()" class="form-select">
+                @for (tipoDte of tipoDteList ;  track tipoDteList){
+                    <option value={{tipoDte}}>{{tipoDte}}</option>
+                }
+            </select>
             <input class="mt-2" type="submit">
         </div>
     </form>
